// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Divider ignores alignment at full width 1`] = `
<DocumentFragment>
  <table
    border="0"
    cellpadding="0"
    cellspacing="0"
    role="presentation"
    style="width: 100%;"
    width="100%"
  >
    <tbody>
      <tr>
        <td>
          <table
            border="0"
            cellpadding="0"
            cellspacing="0"
            role="presentation"
            style="width: 100%;"
            width="100%"
          >
            <tbody>
              <tr>
                <td
                  style="border-top: 1px solid #333333; font-size: 1px; line-height: 1px;"
                >
                   
                </td>
              </tr>
            </tbody>
          </table>
        </td>
      </tr>
    </tbody>
  </table>
</DocumentFragment>
`;

exports[`Divider renders a narrow rule as a table of that width, positioned by the align attribute 1`] = `
<DocumentFragment>
  <table
    border="0"
    cellpadding="0"
    cellspacing="0"
    role="presentation"
    style="width: 100%;"
    width="100%"
  >
    <tbody>
      <tr>
        <td>
          <table
            align="center"
            border="0"
            cellpadding="0"
            cellspacing="0"
            role="presentation"
            style="width: 72px; margin-left: auto; margin-right: auto;"
            width="72"
          >
            <tbody>
              <tr>
                <td
                  style="border-top: 3px solid #8A1338; font-size: 1px; line-height: 1px;"
                >
                   
                </td>
              </tr>
            </tbody>
          </table>
        </td>
      </tr>
    </tbody>
  </table>
</DocumentFragment>
`;

exports[`Divider renders with default values 1`] = `
<DocumentFragment>
  <table
    border="0"
    cellpadding="0"
    cellspacing="0"
    role="presentation"
    style="width: 100%;"
    width="100%"
  >
    <tbody>
      <tr>
        <td>
          <table
            border="0"
            cellpadding="0"
            cellspacing="0"
            role="presentation"
            style="width: 100%;"
            width="100%"
          >
            <tbody>
              <tr>
                <td
                  style="border-top: 1px solid #333333; font-size: 1px; line-height: 1px;"
                >
                   
                </td>
              </tr>
            </tbody>
          </table>
        </td>
      </tr>
    </tbody>
  </table>
</DocumentFragment>
`;

exports[`Divider renders with props 1`] = `
<DocumentFragment>
  <table
    bgcolor="#fff000"
    border="0"
    cellpadding="0"
    cellspacing="0"
    role="presentation"
    style="width: 100%;"
    width="100%"
  >
    <tbody>
      <tr>
        <td
          style="padding: 1px 4px 3px 2px; background-color: rgb(255, 240, 0);"
        >
          <table
            border="0"
            cellpadding="0"
            cellspacing="0"
            role="presentation"
            style="width: 100%;"
            width="100%"
          >
            <tbody>
              <tr>
                <td
                  style="border-top: 10px solid #444222; font-size: 1px; line-height: 1px;"
                >
                   
                </td>
              </tr>
            </tbody>
          </table>
        </td>
      </tr>
    </tbody>
  </table>
</DocumentFragment>
`;
